# Parsing_agent

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/agent/: parser_agent.py
src/api/: router.py
src/api/v1/: parser_agent.py
src/core/: config.py
src/schemas/: llm_response.py  state.py
