[tool.poetry]
name = "langchain_ai"
version = "0.1.0"
description = ""
authors = ["maxim.maltisov <m.maltisov@agima.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.15"

# =============================
# Fastapi экосистема
# =============================

fastapi = "^0.116.1"
pydantic-settings = "^2.10.1"
uvicorn = "^0.35.0"

# =============================
# LangChain экосистема
# =============================
langchain = "^0.3.27"
langchain-community = "^0.3.27"
openai = "^1.101.0"
faiss-cpu = "^1.12.0" # Векторная БД
langchain-openai = "^0.3.32"
langgraph = "^0.6.7"

# =============================
# Для парсинга
# =============================
bs4 = "^0.0.2"
requests = "^2.32.5"
lxml = "^6.0.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
